# Stretch-timer

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  StretchTimer.pro  StretchTimer.sln  StretchTimer.vcxproj  StretchTimer.vcxproj.filters  StretchTimer_resource.rc  Todo.md  aboutdialog.cpp  aboutdialog.ui  alarm.cpp  alarm.h  alarmdialog.ui  countdowntimer.cpp  countdowntimer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  settingswidget.cpp  settingswidget.h  settingswidget.ui  stretch-timer.pro  version.h
cmake/: gitversion.cmake  stretch-timer.desktop.in  version.h.in
scripts/: build-deb.sh  clang-format.sh
src/: CMakeLists.txt  StretchTimer.pro  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  alarmdialog.cpp  alarmdialog.h  alarmdialog.ui  common.h  countdowntimer.cpp  countdowntimer.h  darkStyle.cpp  darkstyle.cpp  darkstyle.h  idletimer.cpp  idletimer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  stretch-timer.pro  version.h
src/res/: alternative_darkstyle.qss  res.qrc
src/res/darkstyle/: darkstyle.qss
